Producer cosumer with Lock interface